--- a/Dissertacao/Referencias/referencias.bib
+++ b/Dissertacao/Referencias/referencias.bib
@@ -133,4 +133,20 @@
   url     = {http://www.ateomomento.com.br/uml-diagrama-de-atividades/},
 }
 
+@Article{Ableson2009,
+  author  = {Frank Ableson},
+  title   = {Introdu\c{c}\~ao ao Desenvolvimento do Android},
+  journal = {IBM Developer Works},
+  year    = {2009},
+  url     = {https://www.ibm.com/developerworks/br/library/os-android-devel/index.html},
+}
+
+@Article{Developers2018,
+  author  = {Android Developers},
+  title   = {Arquitetura da plataforma android},
+  journal = {Android Developers},
+  year    = {2018},
+  url     = {https://developer.android.com/guide/platform/?hl=pt-br},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
