--- a/Dissertacao/modelo_dissertacao.tex
+++ b/Dissertacao/modelo_dissertacao.tex
@@ -180,6 +180,7 @@ This is the english abstract. (maximum of 500 words).
 \listadetabelas % geração automática da lista de tabelas
 \listadequadros % geração automática da lista de quadros
 \listadesiglas  % geração automática da lista de siglas
+\listadeacronimos   % geração automática da lista de acrônimos
 
 % sumario
 \sumario % geração automática do sumario
