Add resumo and abstract

--- a/Dissertacao/Capitulo3/Cap3.tex
+++ b/Dissertacao/Capitulo3/Cap3.tex
@@ -204,7 +204,7 @@ Apresenta-se os prot\'otipos de tela do sistema.
 
 \section{Cronograma}
 
-Apresenta-se o cronograma, determinando todas as atividades do processo de desenvolvimento do software, com o per\'iodo definido de 10 meses, definido de acordo com o programa "Protagonismo Estudantil", projeto ao qual o aplicativo apresentado neste documento foi contemplado com bolsa remunerada. 
+Apresenta-se o cronograma, determinando todas as atividades do processo de desenvolvimento do software, com o per\'iodo definido de 10 meses, definido de acordo com o programa "Protagonismo Estudantil", projeto ao qual o aplicativo apresentado neste documento foi contemplado com bolsa remunerada, tendo in\'inicio em outubro de 2017. 
 
 \begin{table}[H]
 	 \caption{Cronograma de atividades}
