--- a/Dissertacao/modelo_dissertacao.tex
+++ b/Dissertacao/modelo_dissertacao.tex
@@ -156,14 +156,22 @@ Muitas palavras n\~ao indicam necessariamente muita sabedoria. (Tales de Mileto)
 
 %%%%% resumo
 \begin{resumo}
-Texto do resumo (m\'aximo de 500 palavras).
+	
+A gagueira \'e uma doen\c{c}a caracterizada pela repeti\c{c}\~ao de sons e s\'ilabas, que n\~ao tem cura, mas que pode ser tratada por um fonoaudi\'ologo especializado na \'area. Existem tratamentos convencionais que trabalham com aspectos como a respira\c{c}\~ao, prolongamento das s\'ilabas e articula\c{c}\~ao vocal, outros tratamentos, utilizam-se de aparelhos tecnol\'ogicos para melhorar a flu\^encia da fala. 
+A retroalimenta\c{c}\~ao auditiva atrasada RAA é um m\'etodo de tratamento da gagueira que simula o efeito coro, causado quando uma pessoa que gagueja ouve sua voz repetida, com um pequeno atraso e num tom diferente, causando melhorias significativas em rela\c{c}\~ao \`as disflu\^encias da fala. 
+Al\'em do SpeechEasy, um aparelho que combina hardware e software para simular o efeito coro, existem softwares que se utilizam de mecanismos de reprodu\c{c}\~ao de \'audio, como fones de ouvidos que possuam microfone, para proporcionar o RAA. O valor do SpeechEasy de aproximadamente 10 mil reais limita sua aquisi\c{c}\~ao para uma parcela pequena da popula\c{c}\~ao, para dispositivos m\'oveis os softwares que trazem a mesma funcionalidade que o aparelho, em sua maioria não s\~ao gratuitos, ou possuem restri\c{c}\~oes em suas vers\~oes gratuitas. 
+Este projeto tem como objetivo desenvolver um aplicativo para dispositivos m\'oveis, que atenda a plataforma Android, tendo como funcionalidade principal proporcionar a simula\c{c}\~ao do efeito coro. Suprindo a necessidade da disponibiliza\c{c}\~ao de uma op\c{c}\~ao funcional e gratuita para o tratamento da gagueira utilizando a Retroalimenta\c{a}\~ao Auditiva Atrasada. 
+
 \end{resumo}
 %
 %%%%% abstract em ingles
 \begin{abstract}
 SOBRENOME, Nome. \textbf{\UTFPRtitledata.} \UTFPRanodefesa. \pageref{LastPage} f. Master Thesis -- Electrical Engineering Graduate Program, Federal University of Technology - Paraná. Cornélio Procópio, \UTFPRdatadata.
 
-This is the english abstract. (maximum of 500 words).
+Stuttering is a disease characterized by the repetition of sounds and syllables, which have no cure but can be treated by a Speech Therapist specializing in the area. There are conventional treatments that work with aspects such as breathing, syllable prolongation and vocal articulation, other treatments, use of technological devices to improve speech fluency.
+Delayed auditory feedback DAF is a method of treating stuttering that simulates the chorus effect, caused when a person who stutters hears their voice repeatedly, with a short delay and in a different tone, causing significant improvements in relation to speech dysfluencies.
+In addition to SpeechEasy, a device that combines hardware and software to simulate the chorus effect, there are software that uses audio playback mechanisms, such as earphones that have a microphone, to provide the RAA. SpeechEasy's value of approximately 10,000 reais limits its acquisition to a small portion of the population, for mobile devices softwares that bring the same functionality as the device are mostly not free or restricted in their free versions.
+This project aims to develop an application for mobile devices, which meets the Android platform, with the main functionality to provide the simulation of the chorus effect. Addressing the need to provide a functional and free option for stuttering treatment using Delayed Auditory Feedback.
 
 \textbf{Keywords:} \UTFPRkeywordsdata
 \end{abstract}
