--- a/Dissertacao/Capitulo1/Cap1.tex
+++ b/Dissertacao/Capitulo1/Cap1.tex
@@ -1,9 +1,9 @@
 %---------- Primeiro Capitulo ----------
 \chapter{Introdu\c{c}\~ao}
 
-Afetando cerca de 1\% da popula\c{c}\~ao mundial e codificada na Classifica\c{c}\~ao Internacional de Doen\c{c}as (CID-10) com os caracteres F98.5, a gagueira \'e cientificamente considerada como dist\'urbio ou transtorno de flu\^encia da fala \cite{Merlo2013}. Ou seja, \'e um dist\'urbio neurol\'ogico e involunt\'ario, caracterizado por interrup\c{c}\~oes ou prolongamentos, aud\'iveis ou n\~ao de sons e s\'ilabas \cite{Buechel2004}.
+Afetando cerca de 1\% da popula\c{c}\~ao mundial e codificada na \sigla	{CID-10} {Classifica\c{c}\~ao Internacional de Doen\c{c}as} com os caracteres F98.5, a gagueira \'e cientificamente considerada como dist\'urbio ou transtorno de flu\^encia da fala \cite{Merlo2013}. Ou seja, \'e um dist\'urbio neurol\'ogico e involunt\'ario, caracterizado por interrup\c{c}\~oes ou prolongamentos, aud\'iveis ou n\~ao de sons e s\'ilabas \cite{Buechel2004}.
 
-A retroalimenta\c{c}\~ao auditiva atrasada (RAA) \'e um m\'etodo de tratamento da gagueira, que utiliza-se de duas grandezas, a frequ\^encia e o atraso (\textit{delay}), para proporcionar o efeito coro, causado quando uma pessoa que gagueja, fala ou l\^e ao mesmo tempo que outra pessoa, ou seja, faz com que  a pessoa que gagueja ou\c{c}a suas pr\'oprias palavras com um certo atraso tendo a sensa\c{c}\~ao de que est\'a falando junto com outros \cite{Udemo2008}.
+A \sigla{RAA}{retroalimenta\c{c}\~ao auditiva atrasada} \'e um m\'etodo de tratamento da gagueira, que utiliza-se de duas grandezas, a frequ\^encia e o atraso (\textit{delay}), para proporcionar o efeito coro, causado quando uma pessoa que gagueja, fala ou l\^e ao mesmo tempo que outra pessoa, ou seja, faz com que  a pessoa que gagueja ou\c{c}a suas pr\'oprias palavras com um certo atraso tendo a sensa\c{c}\~ao de que est\'a falando junto com outros \cite{Udemo2008}.
 
 Um aparelho tecnol\'ogico que oferece o RAA como funcionalidade \'e o \textit{SpeechEasy} da Microsom, que se assemelha muito em sua apar\^encia, com um aparelho para deficientes auditivos. Segundo a Microsom, o \textit{SpeechEasy} tem efici\^encia em 75\% das pessoas que o utilizam e cerca de 80\% dos clientes que adquiriram o produto, est\~ao satisfeitos com o resultado \cite{Microson2015}. Uma pesquisa realizada em 31 pessoas com gagueira, registrou resultados parecidos, apresentando melhorias de cerca de 79\% na leitura e 61\% na fala auto-expressiva dos participantes com a utiliza\c{c}\~ao do aparelho \cite{Andrade2008}. 
 
