--- a/Dissertacao/Capitulo3/Cap3.tex
+++ b/Dissertacao/Capitulo3/Cap3.tex
@@ -84,8 +84,8 @@ A prioridade dos requisitos pode ser classificada em:
 	
 \end{itemize}
 
-\begin{quadro}[H]
-	\caption{Requisitos Funcionais}\label{quad:reqfuncionais}
+\begin{table}[H]
+	\caption{Requisitos Funcionais}\label{tab:reqfuncionais}
 	\centering
 	\begin{tabular}{|p{1.0cm}|p{8.0cm}|p{2.0cm}|p{2.5cm}|}
 		\hline
@@ -111,11 +111,11 @@ A prioridade dos requisitos pode ser classificada em:
 		\hline	
 	\end{tabular}
 	\fonte{O Autor.}	
-\end{quadro}
+\end{table}
 
 
-\begin{quadro}[H]
-	\caption{Requisitos N\~ao-Funcionais}\label{quad:reqnaofuncionais}
+\begin{table}[H]
+	\caption{Requisitos N\~ao-Funcionais}\label{tab:reqnaofuncionais}
 	\centering
 	\begin{tabular}{|p{1.0cm}|p{5.0cm}|p{2.5cm}|p{2.0cm}|p{2.5cm}|}
 		\hline
@@ -131,7 +131,7 @@ A prioridade dos requisitos pode ser classificada em:
 		\hline
 	\end{tabular}
 	\fonte{O Autor.}
-\end{quadro}
+\end{table}
 
 
 \subsection{Diagrama de Classes}
