Commit cap 2 evoluindo

--- a/Dissertacao/Capitulo1/Cap1.tex
+++ b/Dissertacao/Capitulo1/Cap1.tex
@@ -12,9 +12,9 @@ Existem aplicativos que exercem a funcionalidade de simular o efeito coro, tanto
  
 \section{Problema}
 
-Custando aproximadamente 10 mil reais e podendo ser adquirido somente sob consulta com uma fonoaudi\'ologa especializada, o \textit{SpeechEasy} acaba se tornando uma op\c{c}\~ao restrita para pessoas com poucas condi\c{c}\~oes financeiras. Segundo o Instituto Brasileiro de Flu\^encia a Microson est\'a em contato com o Minist\'erio de Sa\'ude para que o aparelho seja disponibilizado pelo SUS, por\'em enquanto isso n\~ao ocorre, sua disponibilidade \'e limitada para quem tem condi\c{c}\~oes de investir cerca de 10 sal\'arios m\'inimos neste produto.
+Custando aproximadamente 10 mil reais e podendo ser adquirido somente sob consulta com uma fonoaudi\'ologa especializada, o \textit{SpeechEasy} acaba se tornando uma op\c{c}\~ao restrita para pessoas com poucas condi\c{c}\~oes financeiras. Segundo o \sigla{IBF}{Instituto Brasileiro de Flu\^encia} a Microson est\'a em contato com o Minist\'erio de Sa\'ude para que o aparelho seja disponibilizado pelo SUS, por\'em enquanto isso n\~ao ocorre, sua disponibilidade \'e limitada para quem tem condi\c{c}\~oes de investir cerca de 10 sal\'arios m\'inimos neste produto.
 
-Ao contr\'ario da plataforma Windows onde existe a ferramenta "Mais Flu\^encia" que oferece a funcionalidade de simular o efeito coro, gratuitamente e sem limita\c{c}\~oes. Para plataforma Android encontra-se diversos aplicativos que sequer conseguem atender essa funcionalidade e quando atendem existem limita\c{c}\~oes em suas vers\~oes gratuitas.
+Ao contr\'ario da plataforma \textit{Window}s onde existe a ferramenta "Mais Flu\^encia" que oferece a funcionalidade de simular o efeito coro, gratuitamente e sem limita\c{c}\~oes. Para plataforma Android encontra-se diversos aplicativos que sequer conseguem atender essa funcionalidade e quando atendem existem limita\c{c}\~oes em suas vers\~oes gratuitas.
 
 Existe uma grande dificuldade em encontrar uma ferramenta para dispositivos m\'oveis que realmente atenda a funcionalidade de simular o efeito coro, que seja fornecida gratuitamente sem restric\~oes de utiliza\c{c}\~ao. 
 
