--- a/Dissertacao/Capitulo2/Cap2.tex
+++ b/Dissertacao/Capitulo2/Cap2.tex
@@ -4,9 +4,19 @@
 \label{chap:desenv}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Com o objetivo de simular o efeito coro, além do \textit{SpeechEasy} que integra \textit{hardware} e \textit{software} \cite{Microson2015} num dispositivo eletr\^onico, existem algumas ferramentas que trabalham somente com \textit{software} e que exercem essa fun\c{c}\~ao juntamente com algum dispositivo de reprodu\c{c}\~ao de a\'udio que contenha microfone. 
+Com o objetivo de simular o efeito coro, além do \textit{SpeechEasy} que integra \textit{hardware} e \textit{software} num dispositivo eletr\^onico personalizado, oferecendo op\c{c}\~oes de tamanho, e diferenciais como adapta\c{c}\~ao instant\^anea e menor efeito de oclus\~ao \cite{Microson2015}. Existem algumas ferramentas que trabalham somente com \textit{software} e que exercem essa fun\c{c}\~ao juntamente com algum dispositivo de reprodu\c{c}\~ao de a\'udio que contenha microfone. 
+\begin{figure}[H]
+	\centering
+	%\begin{measuredfigure}
+	\caption{Op\c{c}\~oes de tamanho do SpeechEasy. \label{fig:gdimotes}}
+	\includegraphics[height=5cm]{./figuras/speecheasy_invisivel_figure.png} \quad
+	\includegraphics[height=5cm]{./figuras/speecheasy_pequeno_figure.png} \quad
+	\includegraphics[height=5cm]{./figuras/speecheasy_microcanal_figure.png} \newline
+	\fonte{\cite{Microson2015}}
+	%\end{measuredfigure}
+\end{figure}
 
-Para computadores de mesa e notebooks com sistema operacional Windows, existe o "\textit{Software} Mais Flu\^encia Win DAF/FAF \textit{Software}", desenvolvida em 2009 pelo Henrique Confessor, \'e \textit{freeware} podendo ser distribu\'ida e utilizada livremente. Disponibilizada gratuitamente para \textit{download} no site da "Abra Gagueira" \cite{Confessor2009}.
+Para computadores de mesa e notebooks com sistema operacional Windows, existe o "\textit{Software} Mais Flu\^encia Win DAF/FAF \textit{Software}", desenvolvido em 2009 pelo Henrique Confessor, \'e \textit{freeware} podendo ser distribu\'ido e utilizado livremente, disponibilizado gratuitamente para \textit{download} no site da "Abra Gagueira" \cite{Confessor2009}. Sua interface simples, permite somente 2 configura\c{c}\~oes, atraso e frequ\^encia, apresenta apenas dois bot\~oes auxiliares que tem as fun\c{c}\~oes de fechar e exibir uma tela com as informa\c{c}\~oes sobre o \textit{software}, como: vers\~ao, e-mail para contato e o link para o blog do autor. \'E o \textit{Software} mais funcional relatado neste documento, atende somente a funcionalidade de simular o efeito coro, n\~ao traz nenhum diferencial. 
 
 \begin{figure}[H]
 	\centering
@@ -16,8 +26,9 @@ Para computadores de mesa e notebooks com sistema operacional Windows, existe o 
 	\fonte{O Autor.}
 \end{figure}
 
-Para dispositivos m\'oveis com sistema operacional Android ou IOS existe o \textit{DAF Assistant} que tem uma vers\~ao gratuita, por\'em com limite de tempo para sua utiliza\c{c}\~ao, j\'a sua vers\~ao paga que n\~ao possui essa restri\c{c}\~ao, custa aproximadamente 13 reais na \textit{Play Store} e 33 reais no \textit{Itunes}, variando de acordo com preço do dollar \cite{Artefact2012}.
+Para dispositivos m\'oveis com sistema operacional Android ou IOS existe o \textit{DAF Assistant} que tem uma vers\~ao gratuita, por\'em com limite de tempo para sua utiliza\c{c}\~ao, j\'a sua vers\~ao paga que n\~ao possui essa restri\c{c}\~ao, custa aproximadamente 13 reais na \textit{Play Store} e 33 reais no \textit{Itunes}, variando de acordo com preço do dollar \cite{Artefact2012}. 
 
+O \textit{DAF Assistant} possui uma interface intuitiva, contendo as op\c{c}\~oes de configurar atraso e frequ\^encia, traz apenas dois bot\~oes repons\'aveis por iniciar ou parar a reprodu\c{c}\~ao do efeito coro. Existem op\c{c}\~oes que n\~ao est\~ao vis\'iveis na tela, ficando acess\'iveis somente quando pressionado o bot\~ao de configura\c{c}\~ao do celular (dependendo de cada dispositivo), exibindo a op\c{c}\~ao de fechar o aplicativo, ou ir para uma tela de preferencias, onde \'e poss\'ivel ativar a utiliza\c{c}\~ao de um \textit{headset bluetooth}, al\'em do \textit{auto mute}, \textit{mute after} e configurar a sensibilidade da fala em baixa, normal ou alta. 
 \begin{figure}[H]
 	\centering
 	%\captionsetup{width=0.97\textwidth}
@@ -26,7 +37,7 @@ Para dispositivos m\'oveis com sistema operacional Android ou IOS existe o \text
 	\fonte{\cite{Artefact2012}}
 \end{figure}
 
-Com o intuito de fornecer o \sigla{FAA}{\textit{feedback} auditivo atrasado}, existe o aplicativo "Terapia para a gagueira - FAA", que \'e gratuito e traz informa\c{c}\~oes interessantes sobre o tratamento da gagueira, como dicas de como utilizar o aplicativo e informações adicionais sobre tratamentos que melhoram a flu\^encia da fala. Lembrando que diferente da \sigla{RAA}{Retroalimenta\c{c}\~ao Auditiva Atrasada}, o FAA trabalha apenas com o atraso na reprodução da voz, n\~ao alterando a frequ\^encia com que a voz \'e reproduzida \cite{Age2017}. 
+Com o intuito de fornecer o \sigla{FAA}{\textit{feedback} auditivo atrasado}, tamb\'em para a plataforma Android existe o aplicativo "Terapia para a gagueira - FAA", que \'e gratuito e traz informa\c{c}\~oes interessantes sobre o tratamento da gagueira, como dicas de como utilizar o aplicativo e informações adicionais sobre tratamentos que melhoram a flu\^encia da fala. Lembrando que diferente da \sigla{RAA}{retroalimenta\c{c}\~ao auditiva atrasada}, o FAA trabalha apenas com o atraso na reprodu\c{c}\~ao da voz, n\~ao alterando a frequ\^encia com que a voz \'e reproduzida \cite{Age2017}. 
 
 \begin{figure}[H]
 	\centering
