--- a/Dissertacao/Capitulo3/Cap3.tex
+++ b/Dissertacao/Capitulo3/Cap3.tex
@@ -1,7 +1,7 @@
 %---------- Terceiro Capitulo ----------
 \chapter{Proposta}
 
-A proposta desse projeto \'e desenvolver um aplicativo para dispositivos m\'oveis com sistema operacional Android, tendo como fun\c{c}\~ao principal o \sigla{RAA}{Retroalimenta\c{c}\~ao Auditiva Atrasada}, ou seja, um aplicativo que consiga reproduzir a voz do usu\'ario simultaneamente com um pequeno atraso configur\'avel, num tom diferente tamb\'em configur\'avel. 
+A proposta desse projeto \'e desenvolver um aplicativo para dispositivos m\'oveis com sistema operacional Android, tendo como fun\c{c}\~ao principal o \sigla{RAA}{retroalimenta\c{c}\~ao auditiva atrasada}, ou seja, um aplicativo que consiga reproduzir a voz do usu\'ario simultaneamente com um pequeno atraso configur\'avel, num tom diferente tamb\'em configur\'avel. 
 
 A finalidade dessas configura\c{c}\~oes que devem ser adaptadas para cada indiv\'iduo \'e simular o efeito coro, que nada mais \'e do que um efeito causado quando uma pessoa que possui gagueira, fala ou l\^e ao mesmo tempo que outra, trazendo melhorias significativas na fala \cite{Udemo2008}.
 
@@ -49,7 +49,7 @@ Para o desenvolvimento do aplicativo descrito neste documento, utiliza-se uma me
 \section{An\'alise e Desenvolvimento}
 
 \subsection{Arquitetura}
-Utiliza-se como arquitetura de desenvolvimento, a arquitetura de camadas do software Android, que \'e executado sobre um kernel Linux. Os aplicativos Android s\~ao gravados na linguagem de programa\c{c}\~ao Java e s\~ao executados em uma m\'aquina virtual (VM) \cite{Ableson2009}.
+Utiliza-se como arquitetura de desenvolvimento, a arquitetura de camadas do software Android, que \'e executado sobre um \textit{kernel} Linux. Os aplicativos Android s\~ao gravados na linguagem de programa\c{c}\~ao Java e s\~ao executados em uma \sigla{VM} {m\'aquina virtual} \cite{Ableson2009}.
 
 A figura a seguir apresenta a maioria dos componentes da plataforma Android. 
 \begin{figure}[H]
