--- a/Dissertacao/modelo_dissertacao.tex
+++ b/Dissertacao/modelo_dissertacao.tex
@@ -182,7 +182,7 @@ This project aims to develop an application for mobile devices, which meets the 
 \listadeilustracoes
 \listadefiguras % geração automática da lista de figuras
 \listadetabelas % geração automática da lista de tabelas
-\listadesiglas  % geração automática da lista de siglas
+%%\listadesiglas  % geração automática da lista de siglas
 \listadeacronimos   % geração automática da lista de acrônimos
 
 % sumario
