--- a/Dissertacao/Capitulo1/Cap1.tex
+++ b/Dissertacao/Capitulo1/Cap1.tex
@@ -26,7 +26,7 @@ O problema no Brasil \'e que o SpeechEasy n\~ao pode ser adquirido pela maioria 
 
 Realizar apresenta\c{c}\~oes, semin\'arios ou quaisquer atividades que necessitam de atividade vocal na universidade, para pessoas com gagueira \'e uma tarefa bem dif\'icil, pois al\'em da dificuldade de demonstrar conhecimento sobre o assunto exposto, existe tamb\'em a dificuldade para se expressar de maneira fluente. 
 
-O problema na universidade \'e que n\~ao existem mecanismo que auxiliam esses alunos a lidarem com essas situa\c{c}\~oes, o que acaba muitas vezes fazendo com que a pessoa que tem gagueira desista de realizar determinadas atividades pela dificuldade de comunica\c{c}\~ao.
+O problema na universidade \'e que n\~ao existem mecanismos que auxiliam esses alunos a lidarem com essas situa\c{c}\~oes, o que acaba muitas vezes fazendo com que a pessoa que tem gagueira desista de realizar determinadas atividades pela dificuldade de comunica\c{c}\~ao.
 
 
 \section{Objetivos}
