--- a/Dissertacao/Capitulo2/Cap2.tex
+++ b/Dissertacao/Capitulo2/Cap2.tex
@@ -16,7 +16,7 @@ Com o objetivo de simular o efeito coro, além do \textit{SpeechEasy} que integra
 	%\end{measuredfigure}
 \end{figure}
 
-Para computadores de mesa e notebooks com sistema operacional Windows, existe o "\textit{Software} Mais Flu\^encia Win DAF/FAF \textit{Software}", desenvolvido em 2009 pelo Henrique Confessor, \'e \textit{freeware} podendo ser distribu\'ido e utilizado livremente, disponibilizado gratuitamente para \textit{download} no site da "Abra Gagueira" \cite{Confessor2009}. Sua interface simples, permite somente 2 configura\c{c}\~oes, atraso e frequ\^encia, apresenta apenas dois bot\~oes auxiliares que tem as fun\c{c}\~oes de fechar e exibir uma tela com as informa\c{c}\~oes sobre o \textit{software}, como: vers\~ao, e-mail para contato e o link para o blog do autor. \'E o \textit{Software} mais funcional relatado neste documento, atende somente a funcionalidade de simular o efeito coro, n\~ao traz nenhum diferencial. 
+Para computadores de mesa e notebooks com sistema operacional Windows, existe o "\textit{Software} Mais Flu\^encia Win DAF/FAF \textit{Software}", desenvolvido em 2009 pelo Henrique Confessor, \'e \textit{freeware} podendo ser distribu\'ido e utilizado livremente, disponibilizado gratuitamente para \textit{download} no site da "Abra Gagueira" \cite{Confessor2009}. Sua interface simples, permite somente duas configura\c{c}\~oes, atraso e frequ\^encia, apresenta apenas dois bot\~oes auxiliares que tem as fun\c{c}\~oes de fechar e exibir uma tela com as informa\c{c}\~oes sobre o \textit{software}, como: vers\~ao, e-mail para contato e o link para o blog do autor. \'E o \textit{Software} mais funcional relatado neste documento, atende somente a funcionalidade de simular o efeito coro, n\~ao traz nenhum diferencial. 
 
 \begin{figure}[H]
 	\centering
