--- a/Dissertacao/modelo_dissertacao.tex
+++ b/Dissertacao/modelo_dissertacao.tex
@@ -77,7 +77,7 @@
 \titulo{Retroalimenta\c{c}\~ao Auditiva Atrasada: Aplicativo de Aux\'ilio ao Tratamento de Pessoas com Gagueira} % titulo do trabalho em português
 \title{Delayed Auditory Feedback: App of Aid the Treatment of People with Stuttering} % titulo do trabalho em inglês
 \autor{Jefferson de Fran\c{c}a Filho} % autor do trabalho
-\cita{FRANÇA, Filho} % sobrenome (maiúsculas), nome do autor do trabalho
+\cita{FRANÇA, Jefferson} % sobrenome (maiúsculas), nome do autor do trabalho
 
 \palavraschave{Retroalimentação Auditiva Atrasada. Gagueira. Aplicativo de Auxílio ao Tratamento de Pessoas com Gagueira.} % palavras-chave do trabalho - Devem ser inseridas de 3 a 5 palavras chave
 \keywords{Delayed Auditory Feedback. Stuttering. App of Aid the Treatment of People with Stuttering.} % palavras-chave do trabalho em inglês - Devem ser inseridas de 3 a 5 palavras chave
@@ -167,7 +167,7 @@ Este projeto tem como objetivo desenvolver um aplicativo para dispositivos m\'ov
 %
 %%%%% abstract em ingles
 \begin{abstract}
-SOBRENOME, Nome. \textbf{\UTFPRtitledata.} \UTFPRanodefesa. \pageref{LastPage} f. Master Thesis -- Electrical Engineering Graduate Program, Federal University of Technology - Paraná. Cornélio Procópio, \UTFPRdatadata.
+FRANÇA, Jefferson. \textbf{\UTFPRtitledata.} \UTFPRanodefesa. \pageref{LastPage} f. Master Thesis -- Electrical Engineering Graduate Program, Federal University of Technology - Paraná. Cornélio Procópio, \UTFPRdatadata.
 
 Stuttering is a disease characterized by the repetition of sounds and syllables, which have no cure but can be treated by a Speech Therapist specializing in the area. There are conventional treatments that work with aspects such as breathing, syllable prolongation and vocal articulation, other treatments, use of technological devices to improve speech fluency.
 Delayed auditory feedback DAF is a method of treating stuttering that simulates the chorus effect, caused when a person who stutters hears their voice repeatedly, with a short delay and in a different tone, causing significant improvements in relation to speech dysfluencies.
@@ -183,7 +183,7 @@ This project aims to develop an application for mobile devices, which meets the 
 \listadefiguras % geração automática da lista de figuras
 \listadetabelas % geração automática da lista de tabelas
 %%\listadesiglas  % geração automática da lista de siglas
-\listadeacronimos   % geração automática da lista de acrônimos
+%%\listadeacronimos   % geração automática da lista de acrônimos
 
 % sumario
 \sumario % geração automática do sumario
