--- a/Dissertacao/Capitulo3/Cap3.tex
+++ b/Dissertacao/Capitulo3/Cap3.tex
@@ -148,7 +148,7 @@ Apresenta-se o diagrama de classes, uma representa\c{c}\~ao da estrutura e rela\
 
 \subsection{Diagrama de Casos de Uso}
 
-Apresenta-se o diagrama de casos de uso, documenta o que o sistema faz do ponto de vista do usu\'ario, ou seja, descreve as principais funcionalidades do sistema e a intera\c{c}\~ao dessas funcionalidades com os usu\'arios do mesmo sistema \cite{Ribeiro2012}.
+Apresenta-se o diagrama de casos de uso, documentando o que o sistema faz do ponto de vista do usu\'ario, ou seja, descreve as principais funcionalidades do sistema e a intera\c{c}\~ao dessas funcionalidades com os usu\'arios do mesmo sistema \cite{Ribeiro2012}.
 
 \begin{figure}[H]
 	\centering
@@ -192,7 +192,7 @@ Apresenta-se os prot\'otipos de tela do sistema.
 		\fonte{O Autor.}
 	\end{figure}
 
-	\item  Tela Sobre: Neta tela o usu\'ario encontra informa\c{c}\~oes sobre o aplicativo, assim como informa\c{c}\~oes sobre o funcionamento do aplicativo e um tutorial de ajuda. 
+	\item  Tela Sobre: Nesta tela o usu\'ario encontra informa\c{c}\~oes sobre o aplicativo, assim como informa\c{c}\~oes sobre o funcionamento do aplicativo e um tutorial de ajuda. 
 	\begin{figure}[H]
 		\centering
 		%\captionsetup{width=0.97\textwidth}
