Add novas correções

--- a/Dissertacao/Capitulo2/Cap2.tex
+++ b/Dissertacao/Capitulo2/Cap2.tex
@@ -37,7 +37,9 @@ O \textit{DAF Assistant} possui uma interface intuitiva, contendo as op\c{c}\~oe
 	\fonte{\cite{Artefact2012}}
 \end{figure}
 
-Com o intuito de fornecer o \sigla{FAA}{\textit{feedback} auditivo atrasado}, tamb\'em para a plataforma Android existe o aplicativo "Terapia para a gagueira - FAA", que \'e gratuito e traz informa\c{c}\~oes interessantes sobre o tratamento da gagueira, como dicas de como utilizar o aplicativo e informações adicionais sobre tratamentos que melhoram a flu\^encia da fala. Lembrando que diferente da \sigla{RAA}{retroalimenta\c{c}\~ao auditiva atrasada}, o FAA trabalha apenas com o atraso na reprodu\c{c}\~ao da voz, n\~ao alterando a frequ\^encia com que a voz \'e reproduzida \cite{Age2017}. 
+Com o intuito de fornecer o \sigla{FAA}{\textit{feedback} auditivo atrasado}, tamb\'em para a plataforma Android existe o aplicativo "Terapia para a gagueira - FAA", que \'e gratuito e traz informa\c{c}\~oes interessantes sobre o tratamento da gagueira, como dicas de como utilizar o aplicativo e informações adicionais sobre tratamentos que melhoram a flu\^encia da fala. Lembrando que diferente da \sigla{RAA}{retroalimenta\c{c}\~ao auditiva atrasada}, o FAA trabalha apenas com o atraso na reprodu\c{c}\~ao da voz, n\~ao alterando a frequ\^encia com que a voz \'e reproduzida \cite{Age2017}.
+
+A interface do aplicativo Terapia para a gagueira - FAA cont\'em muita informa\c{c}\~ao, possuindo muitos bot\~oes, isso se da pelo fato de oferecer diversas funcionalidades al\'em do FAA, como: oferece um espelho utilizando a c\^amera frontal do dispositivo, op\c{c}\~ao de gravar o \'audio enquanto faz a utiliza\c{c}\~ao do aplicativo, disponibiliza um metr\^onomo para controle do r\'itimo da fala e um v\'ideo contendo informa\c{c}\~oes sobre o tratamento da gagueira. Apesar de gratuito comt\'em muitas propagandas, oque pode ocasionar inc\^omodo em alguns usu\'arios. 
 
 \begin{figure}[H]
 	\centering
