--- a/Dissertacao/modelo_dissertacao.tex
+++ b/Dissertacao/modelo_dissertacao.tex
@@ -91,7 +91,7 @@
 %\coorientador[Co-orientadores:]{Nome do Co-orientador} % no caso de 2 co-orientadores, usar esta sintaxe
 %\coorientadorb{}	% este comando inclui o nome do 2o co-orientador
 
-\coordenadorUTFPR[Coordenadora]{Grau}{Nome do coordenador} % Coordenador do PPGEEL
+\coordenadorUTFPR[Coordenadora]{Doutora}{\'Erica Ferreira Souza} % Coordenador do PPGEEL
 \local{Cornélio Procópio} % cidade
 \data{\UTFPRanodefesa} % Aqui deve ir o ano da defesa.
 
